--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
    "manifest_version": 2,
    "name": "Playlist Duration for YouTube",
    "description": "Shows the total duration of all videos on the playlist page",
-   "version": "1.7.3",
+   "version": "1.7.4",
    "content_scripts": [ {
       "css": [ "PlaylistDuration.css" ],
       "js": [ "PlaylistDuration.js" ],
-      "matches": [ "https://www.youtube.com/playlist*" ]
+      "matches": [ "https://www.youtube.com/*" ]
    } ],
    "background": {
       "scripts": ["background.js"],
