--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,12 @@
    "manifest_version": 2,
    "name": "Playlist Duration for YouTube",
    "description": "Shows the total duration of all videos on the playlist page",
-   "version": "1.7.4",
+   "version": "1.8.0",
    "content_scripts": [ {
       "css": [ "PlaylistDuration.css" ],
       "js": [ "PlaylistDuration.js" ],
-      "matches": [ "https://www.youtube.com/*" ]
+      "matches": [ "*://www.youtube.com/*" ]
    } ],
-   "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-   },
    "permissions": [
       "*://www.youtube.com/*", "tabs"
    ],   
